[tool.poetry]
name = "bank-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bank_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
requests = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
